[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
aoc = { git = "https://github.com/samueltardieu/aoc" }
cached = "0.30.0"
itertools = "0.10.1"
nom = "7.1.0"
pathfinding = "3.0.7"
thiserror = "1.0.30"

[build-dependencies]
aoc-build = { git = "https://github.com/samueltardieu/aoc" }

[dev-dependencies]
serial_test = "0.5.1"
